--- a/Web1/appsettings.json
+++ b/Web1/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyConnection": "Host=ep-misty-glade-a2y4ie5c-pooler.eu-central-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_VRUn96ITEiKJ"
-  }
+  },
+  "ImagesDir": "images",
+  "ImageSizes": [
+    50,
+    100,
+    200,
+    400,
+    800,
+    1200
+  ]
 }
