edit csproj to automatically copy new images to image folder when publishing

--- a/Web1/Web1.csproj
+++ b/Web1/Web1.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <Content Include="images\**\*.*">
+		  <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	  
     <Content Update="Helpers\JsonData\Categories.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
